Fix Deputy IT cell position

--- a/config.toml
+++ b/config.toml
@@ -218,7 +218,7 @@ googleAnalytics = ""
     [[params.team.members]]
       img = "ChngZhiXuan.jpg"
       name = "Chng Zhi Xuan"
-      position = "Assistant General Secretary"
+      position = "Assistant IT Secretary"
       wing = "Presidential Wing"
 
     [[params.team.members]]
