--- a/config.toml
+++ b/config.toml
@@ -82,7 +82,7 @@ googleAnalytics = ""
   [params.hero]
     # To change the background image of the hero, replace 'header-bg.jpg' in
     # the 'static/img' folder.
-    title = "Freshmen Orientation Program"
+    title = "Freshmen Orientation Programmes"
     subtitle = "Coming Soon"
     buttonText = "Learn more"
     buttonLink = "https://freshmen.nuscomputing.com"
